Get rid of all deprecated and unused warnings